bug-fix:width-overflow-issue-fix

--- a/Components/Header/css/styles.css
+++ b/Components/Header/css/styles.css
@@ -17,6 +17,31 @@ main {
   width: 100%;
 }
 
+@media only screen and (max-width: 1100px) {
+  .header {
+    height: fit-content !important;
+    
+  }
+  main {
+    background-color: rgba(0, 0, 0, 0.683);
+    height: 100%;
+    width: 100%;
+    padding: 50px 0 0 0;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .header {
+    height: fit-content !important;
+  }
+  main {
+    background-color: rgba(0, 0, 0, 0.683);
+    height: 100%;
+    width: 100%;
+    padding: 50px 0 0 0;
+  }
+}
+
 @media only screen and (max-width: 500px) {
   .header {
     height: fit-content !important;
