--- a/app/globals.css
+++ b/app/globals.css
@@ -56,6 +56,25 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: none !important;
 }
 
+body {
+  overflow-x: hidden;
+}
+
+@media only screen and (max-width: 1100px) {
+  .booking-form {
+    position: relative;
+    top: 50px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
+}
+@media only screen and (max-width: 850px) {
+  .booking-form {
+    border-radius: 0px;
+    position: relative;
+    top: 50px;
+  }
+}
+
 @media only screen and (max-width: 500px) {
   * {
     font-size: 18px;
